import { layer as newLayer } from "../../maps/layers/layer-layout.js";
import { terrainFromLayers } from "../../maps/terrain/terrain-from-layers.js";
import { compileTerrainChunk } from "./compile-terrain-chunk.js";

describe("compileTerrainChunk", () => {
  it("compiles terrain chunk with single tile", () => {
    const layerLayout = newLayer((_x, _y) => 1);
    const layer = layerLayout.construct([1, 0, 2], [1, 1, 1]);
    const terrain = terrainFromLayers([layer]);
    const chunk = compileTerrainChunk(terrain, [1, 2], [1, 1]);
    expect(chunk).toMatchSnapshot();
  });

  it("compiles terrain chunk with multiple tiles", () => {
    const layerLayout = newLayer((x, y) => x + y);
    const layer = layerLayout.construct([1, 0, 0], [2, 1, 2]);
    const terrain = terrainFromLayers([layer]);
    const chunk = compileTerrainChunk(terrain, [0, -1], [2, 2]);
    expect(chunk).toMatchSnapshot();
  });
});
