// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`compileTerrainChunk compiles terrain chunk with multiple tiles 1`] = `
{
  "bounds": {
    "center": Float64Array [
      1,
      -1,
      0,
    ],
    "dimensions": Float64Array [
      2,
      0,
      2,
    ],
  },
  "colors": [
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
  ],
  "indices": [
    0,
    1,
    2,
    2,
    3,
    0,
    3,
    4,
    5,
    5,
    6,
    3,
    6,
    7,
    8,
    8,
    9,
    6,
    9,
    10,
    11,
    11,
    12,
    9,
  ],
  "normals": [
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
  ],
  "positions": [
    0,
    -1,
    -1,
    1,
    -1,
    -1,
    0,
    -1,
    0,
    1,
    0,
    -1,
    2,
    0,
    -1,
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    2,
    1,
    0,
    1,
    1,
    1,
  ],
}
`;

exports[`compileTerrainChunk compiles terrain chunk with single tile 1`] = `
{
  "bounds": {
    "center": Float64Array [
      1.5,
      1,
      2.5,
    ],
    "dimensions": Float64Array [
      1,
      0,
      1,
    ],
  },
  "colors": [
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
  ],
  "indices": [
    0,
    1,
    2,
    2,
    3,
    0,
  ],
  "normals": [
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
  ],
  "positions": [
    1,
    1,
    2,
    2,
    1,
    2,
    1,
    1,
    3,
  ],
}
`;
